<resources>
    <string name="app_name">Rahmandhika_00000040733</string>
    <string name="ref_1">https://www.youtube.com/watch?v=XWvmGCZfwk4</string>
    <string name="ref_2">https://www.youtube.com/watch?v=HyHNuVaZJ-k</string>
    <string name="ref_3">https://www.youtube.com/watch?v=HHwIfqqzsOk</string>
    <string name="nama">Rahmandhika</string>
    <string name="nim">00000040733</string>
    <string name="kelas">IF 570 - AL</string>
    <string name="ref_4">https://elearning.umn.ac.id/</string>
    <string name="ref_5">https://badoystudio.com/cara-menggunakan-circular-imageview/</string>
    <string name="ref_6">https://elearning.umn.ac.id/</string>

</resources>